--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WUZAPI Manager</title>
     
+    <!-- Preconnect hints for external origins (Task 1.1) -->
+    <!-- Supabase preconnect will be injected by Vite plugin based on env -->
+    <link rel="dns-prefetch" href="https://wzapi.wasend.com.br" />
+    <link rel="preconnect" href="https://wzapi.wasend.com.br" crossorigin />
+    
     <!-- Meta tags para compartilhamento (serão atualizadas dinamicamente) -->
     <meta property="og:title" content="WUZAPI Manager" />
     <meta property="og:site_name" content="WUZAPI Manager" />
