feat(cache-redis): implement Redis caching layer with performance optimizations
- Add Redis service integration with connection pooling and error handling
- Implement CacheService abstraction for consistent cache operations across routes
- Add cache middleware for automatic response caching on GET endpoints
- Configure Redis in docker-compose with health checks and resource limits
- Add Redis environment variables to .env and .env.docker.example files
- Implement useAdminPlans hook with React Query integration for plan management
- Add caching for admin plans, branding config, and tenant information endpoints
- Update API client with improved error handling and request interceptors
- Add comprehensive design and requirements documentation in .kiro/specs
- Optimize query client configuration with stale time and cache time settings
- Improve Docker Compose configuration with resource constraints and networking
- Update README and DOCKER_QUICK_START with Redis setup instructions
- Add badge component styling improvements for better UI consistency
- Implement automatic cache invalidation on data mutations
- Reduce database load and improve API response times through intelligent caching

--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WUZAPI Manager</title>
     
-    <!-- Preconnect hints for external origins (Task 1.1) -->
-    <!-- Supabase preconnect will be injected by Vite plugin based on env -->
+    <!-- DNS prefetch for external origins (loaded on-demand) -->
     <link rel="dns-prefetch" href="https://wzapi.wasend.com.br" />
-    <link rel="preconnect" href="https://wzapi.wasend.com.br" crossorigin />
     
     <!-- Meta tags para compartilhamento (serão atualizadas dinamicamente) -->
     <meta property="og:title" content="WUZAPI Manager" />
